BlazorApp/wwwroot/k8s_example/gateway-api/http-headers.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-headers-request
spec:
  parentRefs:
    - name: eg
  hostnames:
    - headers.lvh.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 3000
          weight: 1
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: "add-header-1"
                value: "foo"
            set:
              - name: "set-header-1"
                value: "bar"
            remove:
              - "removed-header"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-headers-response
spec:
  parentRefs:
    - name: eg
  hostnames:
    - headers.lvh.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 3000
          weight: 1
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: "add-header-1"
                value: "foo"
            set:
              - name: "set-header-1"
                value: "bar"
            remove:
              - "removed-header"
