BlazorApp/wwwroot/k8s_example/gateway-api/http-request-mirror.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-2
  labels:
    app: backend-2
    service: backend-2
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: backend-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-2
      version: v1
  template:
    metadata:
      labels:
        app: backend-2
        version: v1
    spec:
      serviceAccountName: backend-2
      containers:
        - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          name: backend-2
          ports:
            - containerPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-mirror
spec:
  parentRefs:
    - name: eg
  hostnames:
    - backends.lvh.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestMirror
          requestMirror:
            backendRef:
              kind: Service
              namespace: default  # 必须指定命名空间
              name: backend-2
              port: 3000
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 3000
---
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-mirror-many
spec:
  parentRefs:
    - name: eg
  hostnames:
    - backends.lvh.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /many
      filters:
        - type: RequestMirror
          requestMirror:
            backendRef:
              kind: Service
              name: backend-2
              namespace: default  # 必须指定命名空间
              port: 3000
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 3000
        - group: ""
          kind: Service
          name: backend
          port: 3000
