BlazorApp/wwwroot/k8s_example/gateway-api/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-system-foo
  namespace: kube-system
spec:
  rules:
    - backendRefs:
        - name: default-bar
          namespace: default
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: default-bar
  namespace: default
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: kube-system
  to:
    - group: ""
      kind: Service
